# spotseeker_server

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE_UIUC  NOTICE  README  README.md  UIUC_LICENSE.txt  admin.py  db.sqlite3  dispatch.py  docker-compose.yml  models.py  require_auth.py  requirements-oracle.txt  requirements.txt  sample.env  setup.py  tests.py  urls.py
.github/workflows/: cicd.yml
auth/: all_ok.py  fake_oauth.py  oauth.py
default_forms/: spot.py  spot_extended_info.py  spot_search.py
docker/: app_start.sh  dev-values.yml  prod-values.yml  settings.py  test-values.yml  test.sh  test_settings.py  urls.py
extras/: delimage.py  uw_server_values.py
fixtures/: uw.json
forms/: spot.py  spot_extended_info.py  spot_search.py
logger/: oauth.py
management/commands/: create_consumer.py  create_sample_spots.py  run_labstats_daemon.py  stop_labstats_daemon.py
migrations/: 0002_auto__add_spottype.py  0003_populate_spottype.py  0007_description_to_location_description.py  0008_auto__add_field_spot_last_modified.py  0009_auto__chg_field_spotextendedinfo_value.py  0011_auto__add_unique_spotextendedinfo_spot_key.py  0013_init_image_display_index.py  0014_auto__add_favoritespot.py  0015_auto__add_spacereview.py  0016_auto__add_field_spacereview_original_review__add_field_spacereview_is_.py  0018_auto__add_sharedspacereference__add_sharespacerecipient__add_sharespac.py
org_filters/: __init__.py  sample_search.py  search.py  uiuc_ldap_client.py  uiuc_require_address.py  uiuc_require_edutype.py  uiuc_search.py  uw_search.py
org_filters/sdg/: Makefile.am  __init__.py  attrdict.py  config.py  directory.py  hexdigest.py  standard_path.py
org_filters/sdg/command/: Makefile.am  __init__.py  make_service_secret.py  prune_handoff_session.py
org_filters/sdg/django/: Makefile.am  __init__.py  admin.py  context_processors.py
org_filters/sdg/django/auth/: Makefile.am  __init__.py  backends.py  middleware.py  views.py
org_filters/sdg/django/bluestem/: Makefile.am  __init__.py
org_filters/sdg/django/bluestem/templates/: Makefile.am
org_filters/sdg/django/bluestem/templates/admin/: Makefile.am
org_filters/sdg/django/bluestem/templates/admin/auth/: Makefile.am
org_filters/sdg/django/bluestem/templates/admin/auth/user/: Makefile.am  add_form.html
org_filters/sdg/django/bluestem/templates/auth/: Makefile.am  not_authorized.html
org_filters/sdg/django/handoff/: Makefile.am  __init__.py  _wsapi.py  models.py
org_filters/sdg/django/management/: Makefile.am  __init__.py
org_filters/sdg/django/management/commands/: Makefile.am  __init__.py  createsecretkey.py
org_filters/sdg/django/settings/: Makefile.am  __init__.py  _util.py  custom.py  standard.py
org_filters/sdg/log/: Makefile.am  __init__.py  levels.py
org_filters/sdg/ws/: Makefile.am  __init__.py
org_forms/: uiuc_spot.py  uw_spot.py
requirements/: ldap-requirements.txt  mysql-requirements.txt  oracle-requirements.txt  requirements.txt
spotseeker_server/: __init__.py  admin.py  dispatch.py  load_module.py  models.py  require_auth.py  tests.py  urls.py  views.py
spotseeker_server/auth/: all_ok.py  fake_oauth.py  oauth.py
spotseeker_server/cache/: default_cache.py  memory_cache.py  spot.py
spotseeker_server/default_forms/: item.py  spot.py  spot_search.py
spotseeker_server/extras/: delimage.py  uw_server_values.py
spotseeker_server/fixtures/: auth.json  dummy_oauth.json  oauth.json  uw.json
spotseeker_server/forms/: item.py  spot.py  spot_search.py
spotseeker_server/logger/: oauth.py
spotseeker_server/middleware/: persistent.py
spotseeker_server/migrations/: 0001_initial.py  0001_initial_squashed_0005_auto_20230407_2345.py  0001_squashed_0008_delete_trustedoauthclient.py  0002_auto_20181029_2244.py  0003_auto_20181105_2251.py  0004_auto_20200702_1932.py  0004_auto__del_field_spot_type_name.py  0005_auto_20230406_2303.py  0005_auto_20230406_2328.py  0005_auto_20230407_2345.py  0005_move_description_extended_info.py  0006_auto_20230420_2214.py  0006_auto__del_field_spot_description.py  0008_auto__add_field_spot_last_modified.py  0010_auto__add_field_spot_external_id.py  0012_auto__add_field_spotimage_display_index.py  0015_auto__add_spacereview.py  0017_auto__add_field_trustedoauthclient_bypasses_user_authorization.py  0019_auto__del_sharedspacereference__del_sharespace__del_sharespacerecipien.py  0020_auto__chg_field_spotextendedinfo_value.py  0021_auto__add_field_spotextendedinfo_valid_on__add_field_spotextendedinfo_.py  0021_auto__add_item__add_itemcategory__add_itemextendedinfo__add_itemsubcat.py  0021_auto__add_itemcategory__add_itemextendedinfo__add_futurespotextendedin.py  0022_auto__add_index_spotextendedinfo_valid_until__add_index_spotextendedin.py  0022_auto__del_itemcategory__del_itemsubcategory__chg_field_item_category__.py  0023_auto__add_field_item_item_category__add_field_item_item_subcategory.py  0023_auto__del_field_item_category__del_field_item_subcategory.py  0024_auto__add_field_item_item_category__add_field_item_item_subcategory.py  0024_item_fields.py  0025_auto__del_field_item_category__del_field_item_subcategory.py  0026_auto__add_itemimage.py  0027_auto__add_field_itemimage_modification_date__add_field_itemimage_etag.py
spotseeker_server/models/: __init__.py  auth.py  item.py  space.py  spot.py  utility.py
spotseeker_server/org_filters/: __init__.py  sample_search.py  uw_search.py
spotseeker_server/org_forms/: uiuc_spot.py  uw_spot.py
spotseeker_server/templates/: 404.html  500.html
spotseeker_server/test/: __init__.py  buildings.py  (+22 more)
test/: buildings.py  cache_test.py  favorite_model.py  favorites.py  models.py  no_rest_methods.py  reviews.py  schema.py  share_space.py  spot_delete.py  spot_form.py  spot_get.py  spot_model.py  spot_post.py  spot_put.py
travis/: test.sh
travis_ci/: manage.py  settings.py  urls.py  wsgi.py
views/: add_image.py  all_spots.py  buildings.py  favorites.py  image.py  null.py  oauth.py  person.py  rest_dispatch.py  reviews.py  schema_gen.py  search.py  share_space.py  spot.py  thumbnail.py
(+129 files in other folders)
