#	$URL: https://svn-sdg.cites.illinois.edu:4430/Develop/Product/SDGPython/trunk/module/sdg/django/bluestem/templates/admin/auth/Makefile.am $
#	$Revision: 33486 $ $Date: 2013-01-11 17:05:14 -0600 (Fri, 11 Jan 2013) $

#	Copyright (c) 2008-2010 by Jon Roma and the Board of Trustees of the
#	University of Illinois.  All rights reserved.

SUBDIRS			= user
